# VekBase

./: .env.example  .gitignore  Orders  README.md  RELEASE_NOTES.md  package-lock.json  pyproject.toml  requirements.txt  tasks.ps1  uvicorn_settings.json
.github/workflows/: ci.yml
app/analytics/: metrics.py  patterns.py
app/core/: benchtools.py  decision_card.py  decision_card_repo.py  default_data.py  devtools.py  linttools.py  retrieval.py  snapshots.py  testqueue.py  trade_import.py  trade_model.py  trade_repo.py
app/internal/: admin_devtools.py
app/research/: factor_attribution.py  failure_pattern_miner.py  portfolio_optimizer.py  (+2 more)
docs/: AGENTS.md  ARCHITECTURE.md  AUDIT.md  CONFIG.md  DATA_MODEL.md  EVALUATION.md  INGEST.md  OBSERVABILITY.md  ORDER_CROSSCHECK.md  QUERY.md  README.md  ROADMAP.md  SECURITY.md  SETUP_GPU.md  USAGE.md
scripts/: run_test_batches.py
src/: config.py  server.py
tests/: test_admin_devtools.py  test_admin_features.py  test_analytics_ext.py  test_api.py  test_benchtools.py  test_cagr.py  test_console_theme.py  test_decision_card.py  test_decision_card_repo.py  test_decision_card_workflow.py  test_default_dataset.py  test_devtools.py  test_devtools_audit_export.py  test_devtools_events.py  test_devtools_output_filter.py  test_devtools_panel_helpers.py  test_devtools_session_log.py  test_devtools_shared.py  test_equity_curve.py  test_factor_attribution.py  test_failure_pattern_miner.py  test_linttools.py  test_metrics.py  test_metrics_snapshot_widget.py  test_patterns.py  test_portfolio_optimizer.py  test_queue_aggregates.py  test_queue_metrics_ext.py  test_queue_retention.py  test_regime_detection.py  test_regime_ui.py  test_research_preview.py  test_retrieval.py  test_risk_metrics.py  test_risk_metrics_extended.py  test_rolling_volatility.py  test_roundtrip.py  test_sim_persist.py  test_simulation.py  test_snapshots.py  (+17 more)
(+61 files in other folders)
