[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vekbase"
version = "0.1.0"
description = "VekBase personal trading analytics & devtools platform"
readme = "README.md"
authors = [{name="VekBase Maintainer"}]
license = {text = "Proprietary"}
requires-python = ">=3.11"
dependencies = [
  "streamlit==1.37.0",
  "pytest==8.2.2"
]

[project.optional-dependencies]
dev = ["pytest==8.2.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
pythonpath = ["."]
